# nsp-data-sender

./: .gitignore  CHANGELOG.md  README.md  config.json  nsp-data-sender.service  nsp-data-sender.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-test.yml
.nsp-data-sender/: 2024-10-04-5.json
src/: applicaiton.py  application.py
src/app/: main.py
src/app/configuration/: data.py
src/app/mqtt/: mqtt_listener.py
src/app/senders/: common.py  file_system.py  ftp_sender.py  s3_sender.py  sender.py
tests/: test_sender_factory.py
tests/docs/: mqtt-message-example.json
