[metadata]
name = nsp-data-sender
version = 0.0.1
license = MIT
description = A short description
long_description = file: README.md
author = Joseph McCarthy
author_email = random@example.com
classifiers=

[options]
packages = find:
package_dir =
    = ./
include_package_data = True
install_requires =


[options.packages.find]
where=./